--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,8 +25,9 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
-    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <a class="sidebar-nav-item" href="https://github.com/m1kemu">Github</a>
+		<a class="sidebar-nav-item" href="https://twitter.com/m1kemu">Twitter</a>
+		<a class="sidebar-nav-item" href="/feed.xml">RSS</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
 
