--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,10 @@
       `layout: page` in the front-matter. See readme for usage.
     {% endcomment %}
 
+		<a class="sidebar-nav-item" href="{{ site.baseurl }}/archive/#security">Security</a>
+
+		<a class="sidebar-nav-item" href="{{ site.baseurl }}/archive/#hobbies">Hobbies</a>
+
     {% assign pages_list = site.pages | sort:"url" %}
     {% for node in pages_list %}
       {% if node.title != null %}
